--- a/style.css
+++ b/style.css
@@ -36,16 +36,48 @@ body {
   }
 }
 
+@keyframes shrink2 {
+  0% {
+    transform: translateX(var(--tx)) scaleX(1);
+  }
+  100% {
+    transform: translateX(var(--tx)) scaleX(0.01);
+  }
+}
+
+@keyframes expand2 {
+  0% {
+    transform: translateX(var(--tx)) scaleX(0.01);
+  }
+  100% {
+    transform: translateX(var(--tx)) scaleX(1);
+  }
+}
+
 .shrink-animation {
   transform-origin: center;
   animation: shrink 0.5s ease-in-out;
+  animation-fill-mode: both;
 }
 
 .expand-animation {
   transform-origin: center;
   animation: expand 0.5s ease-in-out;
+  animation-fill-mode: both;
 }
-#poziom{
+
+.shrink-animation2 {
+  transform-origin: center;
+  animation: shrink2 0.5s ease-in-out;
+  animation-fill-mode: both;
+}
+
+.expand-animation2 {
+  transform-origin: center;
+  animation: expand2 0.5s ease-in-out;
+  animation-fill-mode: both;
+}
+#poziom {
   top: 10vh;
   font-size: 5vw;
   left: 5vw;
@@ -78,21 +110,32 @@ input[type="range"]::-webkit-slider-thumb {
   background-color: white; /* Kolor kropki (pomarańczowy) */
   border: 0.3vw solid white; /* Obwódka uchwytu */
   border-radius: 5vw; /* Zaokrąglenie uchwytu, tworzy kropkę */
-  width: clamp(15px, 3vw, 30px);   /* min 15px, rośnie do 3vw, max 30px */
+  width: clamp(15px, 3vw, 30px); /* min 15px, rośnie do 3vw, max 30px */
   height: clamp(15px, 3vw, 30px);
   cursor: pointer; /* Kursor wskazujący */
 }
+.gra {
+  position: absolute;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 15%;
+  top: 35%;
+  left: 30%;
+  width: 40%;
+  height: auto;
+  justify-items: center;
+  align-items: center;
+}
 .karta {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  box-shadow: darkblue 1vw 1vw 4vw;
-  flex: 1;
-  border-radius: 40px;
+  width: 100%;
+  aspect-ratio: 2/4;
+  border-radius: 20px;
   background-color: black;
-  width: 10vw;
-  height: 42.5vh;
-  transition: transform 1s ease;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  box-shadow: darkblue 0.5vw 0.5vw 2vw;
+  transition: transform 0.3 ease;
 }
 
 #karta1 {
@@ -107,39 +150,24 @@ input[type="range"]::-webkit-slider-thumb {
   background-color: red;
 }
 .karta:hover {
-  transform: scale(1.1);
+  transform: scale(1.05);
 }
-.karta1:hover {
-  transform: scale(1.1);
+
+.gra.disabled {
+  pointer-events: none;
 }
-.karta2:hover {
-  transform: scale(1.1);
-}
-.karta3:hover {
-  transform: scale(1.1);
-}
-.gra {
-  position: absolute;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 10vw;
-  top:32vh;
-  left: 25vw;
-  width: 50vw;
-}
-.gra.disabled { pointer-events: none; }
 
 .opis,
 .start {
   background-color: #d58dd8;
   color: white;
-  width: 10vw;
+  width: 10%;
   border-radius: 1vw;
-  height: 7vh;
-  font-size: 3vh;
+  height: 7%;
+  font-size: 200%;
   text-align: center;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-  border: solid #8b639d 0.5vh;
+  border: solid #8b639d 5px;
 }
 .opis:hover,
 .start:hover {
@@ -150,9 +178,9 @@ input[type="range"]::-webkit-slider-thumb {
 }
 #wynik {
   position: absolute;
-  left: 45vw;
-  top: 20vh;
-  font-size: 5vh;
+  left: 45%;
+  top: 20%;
+  font-size: 300%;
   font-weight: bold;
 }
 :root {
@@ -264,199 +292,190 @@ input[type="range"]::-webkit-slider-thumb {
   left: 75vw;
 }
 .motyw2 {
-  text-align: center;
-  font-size: 1.5vw;
-  width: 33.5vw;
-  height: 20vh;
   position: absolute;
-  top: 8vh;
-  left: 61vw;
-  background-color: #d58dd8;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 5%;
+  top: 8%;
+  left: 63%;
+  width: 30%;
+  height: auto;
+  padding-top: 1%;
+  padding-bottom: 1%;
+  justify-items: center;
+  align-items: center;
+  background-color: #8b639d;
   border-radius: 20px;
+  border: #4d384a solid 3px;
 }
-:root {
-  --motyw-w: 10vw;
-  --motyw-h: 20vh;
-  --motyw-1w: 5vw;
-  --motyw-1h: 20vh;
-  --radius: 1vw;
+.czerwony,
+.krol,
+.mot {
+  width: 80%;
+  aspect-ratio: 2/2; /* proporcje jak karta */
+  border-radius: 20px;
+  background-color: black;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  box-shadow: darkblue 0.5vw 0.5vw 2vw;
+  transition: transform 0.3s ease;
 }
+
+.czerwony:hover,
+.krol:hover,
+.mot:hover {
+  transform: scale(1.05);
+}
+
+/* Wnętrze (kolory, symbole) */
+.cz,
+.bl,
+.mot1,
+.mot2,
+.krolbl,
+.krolcz {
+  flex: 1;
+  border-radius: 10px;
+}
+
 .czerwony {
-  width: var(--motyw-w);
-  height: var(--motyw-h);
-  order: 1;
-  border-radius: var(--radius);
   display: flex;
 }
 .cz {
   background-color: red;
-  border-radius: var(--radius);
-  width: var(--motyw-1w);
-  height: var(--motyw-1h);
 }
 .bl {
   background-color: black;
-  border-radius: var(--radius);
-  width: var(--motyw-1w);
-  height: var(--motyw-1h);
 }
 .krol {
-  order: 2;
-  width: var(--motyw-w);
-  height: var(--motyw-h);
-  border-radius: var(--radius);
   display: flex;
-}
-.krolcz {
-  width: var(--motyw-1w);
-  border-radius: var(--radius);
-  height: var(--motyw-1h);
-  background-color: red;
-}
-.krolbl {
-  width: var(--motyw-1w);
-  border-radius: var(--radius);
-  height: var(--motyw-1h);
-  background-color: black;
 }
 .mot {
-  order: 3;
-  width: var(--motyw-w);
-  height: var(--motyw-h);
-  border-radius: var(--radius);
   display: flex;
 }
-.mot1 {
-  width: var(--motyw-1w);
-  border-radius: var(--radius);
-  height: var(--motyw-1h);
-}
-.mot2 {
-  width: var(--motyw-1w);
-  border-radius: var(--radius);
-  height: var(--motyw-1h);
+
+:root {
+  --motyw-w: 10vw;
+  --motyw-h: auto;
+  --motyw-1w: 5vw;
+  --motyw-1h: auto;
+  --radius: 1vw;
 }
 .zasady {
   position: absolute;
   top: 20vh;
   left: 20vw;
-
 }
 
 @media (max-width: 768px) {
   body {
     font-size: 4vw;
   }
-  .gra {
+  /* .gra {
     top: 40vh;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     gap: 15vw;
     left: 12vw;
     width: 50vw;
-  }
-  .karta {
-    width: 15vw;
-    height: 20vh;
+  } */
+  /* .karta {
+    width: 120%;
+  } */
+  .gra {
+    width: 70%;
+    left: 15%;
   }
   .motyw2 {
-    top: 80vh;
-    width: 40vw;
-    height: 5vh;
-    grid-template-columns: 1fr 1fr 1fr;
+    top: 80%;
   }
-  .czerwony,.krol,.mot{
-    width: auto;
-    height: auto;
-  }
-  .cz, .bl, .mot1, .mot2, .krolbl, .krolcz{
-    width: 5vw;
-    height: 5vh;
-  }
+
   .opis,
   .start {
     width: 30vw;
     font-size: 5vw;
-    left: 40vw;
+    left: 35%;
   }
-  .start{
+  .start {
     top: 22vh;
   }
-  .title1{
-    left: 40vw;
+  .title1 {
+    left: 36%;
   }
-  .motyw{
+  .motyw {
     top: 75vh;
     font-size: 4vw;
   }
-  .ile{
-    font-size: 10vw;
-    left: 52vw;
+  .ile {
+    font-size: 200%;
+    left: 48%;
     /* top: 10vh; */
   }
-  .panel{
+  .panel {
     font-size: 30vw;
     grid-template-columns: 1fr 1fr 1fr;
   }
-  .strike, .ogien{
+  .strike,
+  .ogien {
     top: 75vh;
     left: 50vw;
     font-size: 10vw;
   }
-  .ogien{
+  .ogien {
     left: 58vw;
     height: 5vh;
     width: 5vw;
   }
-  .zasady{
-    font-size: 5vw;
-    top: 8vh;
-    padding: 10vw;
+  .zasady {
+    font-size: 100%;
+    top: 42%;
+    /* padding: 10%; */
     left: 3vw;
   }
-  .slider{
+  .slider {
     position: absolute;
     left: 10vw;
     top: 80vh;
   }
-  .poz{
+  .poz {
     top: 75vh;
     font-size: 4vw;
     left: 1vw;
   }
-  .ilosc,.tas{
-    top:80vh;
+  .ilosc,
+  .tas {
+    top: 80vh;
     font-size: 4vw;
   }
-  .tas{
+  .tas {
     top: 3vh;
   }
-  .szybkosc,.szyb{
+  .szybkosc,
+  .szyb {
     top: 88vh;
     font-size: 4vw;
   }
-  .szyb{
+  .szyb {
     top: 3vh;
   }
-  #slider{
+  #slider {
     top: 82.5vh;
     left: 40vw;
     width: 20vw;
   }
-#slider2{
+  #slider2 {
     top: 90.5vh;
     left: 40vw;
     width: 20vw;
   }
-#poziom{
-  top: 75vh;
-  font-size: 4vw;
-  left: 35vw;
-}
-#wynik{
-  top: 65vh;
-  left: 35vw;
-}
+  #poziom {
+    top: 75vh;
+    font-size: 4vw;
+    left: 35vw;
+  }
+  #wynik {
+    top: 60%;
+    left: 35%;
+    font-size: 200%;
+  }
 }
